<resources>
    <string name="app_name">Project Manager</string>
    <string name="change_language">Change language</string>
    <string name="organize_your_projects">Organize your Projects.</string>
    <string name="platform_description">A Platform to manage your projects and tasks.</string>
    <string name="start">Get Started</string>
    <string name="lang">EN</string>
    <string name="login_title">Login</string>
    <string name="welcome_message">Hello, welcome! Please start by logging in.</string>
    <string name="email_hint">Enter your Email…</string>
    <string name="email_input_hint">email@example.com</string>
    <string name="password_hint">Enter your Password…</string>
    <string name="password_input_hint">••••••••</string>
    <string name="login_button">Login</string>
    <string name="register_prompt">Don\'t have an account yet? Register</string>
    <string name="data_security_message">Your data is secure!</string>
    <string name="back">Back</string>
    <string name="company_logo">Company Logo</string>
    <string name="register_title">Create Account</string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint_R">Email</string>
    <string name="password_hint_R">Password</string>
    <string name="register_button">Register</string>
    <string name="login_prompt">Already have an account? Login</string>
    <plurals name="tasks_count">
        <item quantity="one">%d Task</item>
        <item quantity="many">%d Tasks</item>
    </plurals>
    <string name="logout">Logout</string>
    <string name="projects">Projects</string>
    <string name="manage_project">Create Projects</string>
    <string name="manage_users">Manage Users</string>
    <string name="main">Main</string>
    <string name="create_projects">Create Projects</string>
    <string name="manage_tasks">Manage Tasks</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="enter_project_name">Insert project name</string>
    <string name="description">Description</string>
    <string name="enter_project_description">Insert project description</string>
    <string name="project_manager">Project Manager</string>
    <string name="create">Create</string>
    <string name="manage_project2">Manage Project</string>
    <string name="add_task">Add Task</string>
    <string name="add_user">Add User</string>
    <string name="Delete_project">Delete Project</string>
    <string name="tasks">Tasks</string>
    <string name="Edit_project">Edit Project Info</string>
    <string name="delete_dialog_title">Confirm Delete</string>
    <string name="delete_dialog_message_project">Are you sure you want to delete this project?</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="deleting_progress_message">Deleting project…</string>
    <string name="delete_success_message">Project deleted successfully</string>
    <string name="edit">Edit</string>
    <string name="edit_projects">Edit Project Info</string>
    <string name="Create_Task">Create Task</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="create_project" >Create Project</string>
    <string name="project_created">Project Created</string>
    <string name="customer">Customer</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="enter_hourly_rate">Enter hourly Rate</string>
    <string name="daily_work_hours">Daily Work Hours</string>
    <string name="enter_daily_work_hours">Enter daily work hours</string>
    <string name="no_items_in_spinners">No values in the dropdowns</string>
    <string name="project_updated">Project Updated</string>
    <string name="confirm_delete_title">Are you sure you want to delete this project?</string>
    <string name="confirm_delete_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register_success">Registered successfully</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="save">Save</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="create_user">Create User</string>
    <string name="Edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="choose_option">Choose an Option</string>
    <string name="edit_user">Edit User</string>
    <string name="project_id">Project name:</string>
    <string name="no_project">No Project Associated</string>
    <string name="status_open">Open</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_completed">Completed</string>
    <string name="status_archived">Archived</string>
    <string name="required_field">Field Required</string>
    <string name="insira_status">Insert Status</string>
    <string name="task_name">Task Name</string>
    <string name="select_project">Select Project</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="give_task_to_user">Give task to user</string>
    <string name="update_task">Update Task</string>
    <string name="choose_status">Choose Status</string>
    <string name="select_user">Select User</string>
    <string name="add_user_to_project">Add User to Project</string>
    <string name="user_added_to_project">User Added to Project</string>
    <string name="select_task">Select Task</string>
    <string name="add_user_to_task">Add User to Task</string>
    <string name="user_added_to_task">Task added to user</string>
    <string name="select_user_and_task">Select user and task</string>
</resources>