<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateProjectActivity">
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingHorizontal="16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@drawable/ic_left_arrow"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_projects"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvCurrentLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/lang"
                android:textColor="@color/primaryColor"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btnLanguage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/change_language"
                android:padding="8dp"
                android:src="@drawable/ic_language"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etProjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_project_name"
                android:inputType="textCapWords"
                android:background="@drawable/edittext_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etProjectDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/enter_project_description"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:background="@drawable/edittext_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_manager"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>

            <Spinner
                android:id="@+id/spinnerProjectManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>

            <Spinner
                android:id="@+id/spinnerCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hourly_rate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etHourlyRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_hourly_rate"
                android:inputType="numberDecimal"
                android:background="@drawable/edittext_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_work_hours"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etDailyWorkHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_daily_work_hours"
                android:inputType="number"
                android:background="@drawable/edittext_background"/>

            <Button
                android:id="@+id/btnCreateProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"/>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_light"
        android:orientation="horizontal">


    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>